welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: value unary_! is not a member of Unit
  while (!fin()){serpent()}
         ^SnakeBuggle:8: error: value est is not a member of object plm.universe.Direction
  else if (getDirection()==Direction.est){gauche();avance();gauche()}
                                     ^SnakeBuggle:14: error: value est is not a member of object plm.universe.Direction
    if (getDirection()==Direction.est){
                                  ^SnakeBuggle:16: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (estFaceMur()){return true}
                               ^SnakeBuggle:16: warning: enclosing method fin has result type Unit: return value discarded
      if (estFaceMur()){return true}
                        ^SnakeBuggle:19: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      if (estFaceMur()){return true}
                               ^SnakeBuggle:19: warning: enclosing method fin has result type Unit: return value discarded
      if (estFaceMur()){return true}
                        ^SnakeBuggle:21: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  } else return false
                ^SnakeBuggle:21: warning: enclosing method fin has result type Unit: return value discarded
  } else return false
         ^